--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "version": "1.0.1",
   "build": 4,
-  "url": "https://raw.githubusercontent.com/hadukin/comportjson/refs/heads/main/archive/installer.exe"
+  "url": "https://raw.githubusercontent.com/hadukin/comportjson/refs/heads/main/archive/ComportScan-x86_64-1.0.1+4-Installer.exe"
 }
